Replace writer name

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </section>
     </section>
     <footer class="info">
-      <p>Written by <a href="http://evanyou.me">Evan You</a></p>
+      <p>Written by <a href="http://evanyou.me">Best Practice</a></p>
       <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
     </footer>
 
