--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       </section>
     </section>
     <footer class="info">
-      <p>Written by <a href="http://evanyou.me">Best Practice</a></p>
-      <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
+      <p>Written by Best Practice</p>
+      <p>Part of TodoMVC</p>
     </footer>
 
     <script src="https://unpkg.com/babel-polyfill@latest/dist/polyfill.min.js"></script>
